# cc-team

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  pyproject.toml
.claude/rules/: code-quality.md  python-comments.md
.github/workflows/: build.yml
docs/: api.en.md  api.md  api.zh.md  architecture.en.md  architecture.md  architecture.zh.md  protocol-spec.en.md  protocol-spec.zh.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
specs/: dogfood.md  todos.md
specs/plans/: 2026-03-11-relay-v2-deferred-items.md
src/cc_team/: __init__.py  _context_relay.py  _handoff_templates.py  _relay_context.py  _relay_executor.py  _serialization.py  _skill_doc.py  _spawn.py  _sync.py  _team_marker.py  agent_handle.py  cli.py  controller.py  event_router.py  events.py  exceptions.py  filelock.py  inbox.py  inbox_poller.py  message_builder.py  paths.py  process_manager.py  task_manager.py  team_manager.py  tmux.py  types.py
src/cc_team/hooks/: _common.py  session_start.py  statusline.py  stop.py
tests/: conftest.py
tests/integration/: test_cct_flow.py  test_relay_flow.py
tests/protocol/: test_field_matrix.py  test_golden_roundtrip.py  test_naming_convention.py
tests/unit/: test_agent_handle.py  test_cli.py  test_context_relay.py  test_controller.py  test_event_router.py  test_events.py  test_exceptions.py  test_filelock.py  test_handoff_templates.py  test_hooks.py  test_hooks_common.py  test_inbox.py  test_inbox_poller.py  test_message_builder.py  test_paths.py  test_process_manager.py  test_relay_context.py  test_relay_executor.py  test_serialization.py  test_session_start.py  test_session_start_hook.py  test_session_start_team.py  test_setup.py  test_skill_doc.py  test_task_manager.py  test_team_manager.py  test_team_marker.py  test_tmux.py  test_types.py
